--- a/views/contact/contact.pug
+++ b/views/contact/contact.pug
@@ -9,20 +9,22 @@ block content
     .text-wrapper
       .text-wrap
         .hello.he1 안녕하세요.
-        .hello.he2 제 첫 포트폴리오에 들어오신 것을 환영합니다. >_<
+        .hello.he2 저의 첫 포트폴리오에 들어오신 것을 환영합니다. >_<
+        .hello.he3 현재 사이트는 pug / node.js / scss 로 제작되어 있습니다.
         .text
-          .hello.he3 혹시 궁금하신 점이 있다면 아래에 있는 
+          .hello.he3 포트폴리오에 대해 관심이 생기셨거나, 궁금한 점이 있으시다면 아래에 있는 
           .hello.he4 이메일
             .pen
-          .hello.he5 로 연락 주세요.
-          .line 
+          .line-wrap
+            .hello.he5 로 연락 주시길 바랍니다.
+            .line 
         .hello.he6 지금까지 성장하는 개발자 이세빈이였습니다 !
-        .container .container 
-          .contact-wrapper
-            h1 h1
-              .contact-line
-            .contact CONTACT
-          .p.git-hub .git-hub :  
-            a(href="https://github.com/gobltpqls99") https://github.com/gobltpqls99 
-          .p.e-mail .e-mail : gobltpqls99@naver.com
-          .p.cell-phone .cell-phone : 010-7197-3595
+    .container .container 
+      .contact-wrapper
+        h1 h1
+          .contact-line
+        .contact CONTACT
+      .p.git-hub .git-hub :  
+        a(href="https://github.com/gobltpqls99") https://github.com/gobltpqls99 
+      .p.e-mail .e-mail : gobltpqls99@naver.com
+      .p.cell-phone .cell-phone : 010-7197-3595
