--- a/views/home/home.pug
+++ b/views/home/home.pug
@@ -7,12 +7,13 @@ block content
 	.img-wrapper 
 		.Htitle-wrapper
 			.title-wrap 
-				.box
-				.h-line
 				.p.hello 안녕하세요
-				.title
-					.p.p2 
-						#typing &nbsp;
+				.box
+			.title
+				.p.p2 
+					#typing &nbsp; 
+					.h-line
+				.name
 					.p.p3 이세빈
-						.p.p4 입니다.
-				.p5 Welcome My PROTFOLIO
+					.p.p4 입니다.
+			.p5 Welcome My PROTFOLIO
