--- a/public/css/projects.css
+++ b/public/css/projects.css
@@ -190,7 +190,7 @@ body {
   min-width: 100%;
   min-height: 100%;
   background-color: #1d1d1d;
-  background: url(../img/p3-2.jpg) no-repeat center center fixed;
+  background: url(../img/p3-2.jpg) center center fixed;
 }
 
 @media screen and (max-width: 515px) {
