--- a/public/scss/contact.scss
+++ b/public/scss/contact.scss
@@ -4,7 +4,7 @@ body {
   overflow-y: auto;
   min-width: 100%; min-height: 100%;
   background-color: #1d1d1d;
-  background: url(../img/p3-2.jpg) no-repeat center center fixed;
+  background: url(../img/p3-2.jpg) center center fixed;
 }
 
 .Ctitle-wrapper {
@@ -31,122 +31,52 @@ body {
     position: absolute; top: 35%; left: 15%;
     font-size: 1em;
     .text-wrap {
-      .hello {
-        margin-top: 1.5em;
-      }
-      .text{
-        position: relative;
-        display: flex; justify-content: baseline;
-        .hello { margin-top: 1.3em; padding-right: 0.5em; }
-        .he4 { position: relative; width: 66px;
+      .hello { margin-top: 1.2em; }
+      .text{  position: relative;  display: flex; justify-content: baseline;
+        .he3 { width: 750px; }
+        .he4 { position: relative; width: 66px; display: block;
           .pen {
             width: 100%; height: 12px; background-color: #4bf1f14f;
-            position: absolute; top: 60%; left: -5%;
-            @include tablet { width: 80%; }
-            @include mobile { width: 70%; }
+            position: absolute; top: 8px;
           }
         }
       }
-      .line {
-        width: 100%; height: 0.01em;
-        background-color: #4bf1f1;
-        position: absolute; left: 27%; bottom: 8%;
-      }
-      .container {
-        position: absolute; top: 93%; right: -10%;
-        color: #dedede;
-        font-size: 1.45em;
-        font-family: $d2;
-        .contact-wrapper {
-          display: flex; align-items: baseline;
-          font-size: 1.5em;
-          h1 {
-            padding: 1.3em 0;
-            padding-left: 1.5em;
-            padding-right: 0.5em;
-            position: relative;
-            .contact-line {
-              position: absolute; left: 44.5%; bottom: 35%;
-              width: 180%; height: 17px; background-color: #4bf1f14f;
-            }
-          }
-        }
-        .p {
-          padding: 0.5em 2em;
-          font-size: 0.7em;
+      .line-wrap {
+        width: 100%; display: flex;
+        .he5{ width: 200px; }
+        .line {
+          width: 100%; height: 0.01em;
+          background-color: #4bf1f1;
+          margin-top: 1.5em;
+          @include desktop { left: -15%;  bottom: -150%; }
+          @include laptop{ display: none;}
         }
       }
     }
-    @include original {
-      .text-wrap {
-        .text {
-          .line { left: 32%; }
-        }
-        .container { top: 110%; }
-      }
-    }
-    @include desktopL {
-      .text-wrap {
-        .text {
-          .line { left: 35%; }
-        }
-      }
-    }
-    @include desktopM {
-      .text-wrap {
-        .text {
-          .line { left: 37%; }
-        }
-      }
-    }
-    @include desktopM1 {
-      .text-wrap {
-        .text {
-          .line { left: 40%; }
+    @include tablet { font-size: 1em; }
+    @include mobile { font-size: 0.8em; margin-left: 10px; }
+    @include mobileS { display: none; }
+  }
+  .container {
+    position: absolute; top: 60%; right: -30%;
+    color: #dedede;
+    font-size: 1.45em;
+    font-family: $d2;
+    .contact-wrapper {
+      display: flex; align-items: baseline;
+      font-size: 1.5em;
+      h1 {
+        padding: 1.3em 0;
+        padding-left: 1.5em;
+        padding-right: 0.5em;
+        position: relative;
+        .contact-line {
+          position: absolute; left: 44.5%; bottom: 35%;
+          width: 180%; height: 17px; background-color: #4bf1f14f;
         }
       }
     }
-    @include desktopS {
-      .text-wrap {
-        .text {
-          .line { left: 45%; }
-        }
-      }
-    }
-    @include desktop {
-      .text-wrap {
-        .text {
-          .line { left: -15%;  bottom: -150%;}
-        }
-        .container {
-          top: 110%; right: 0%;
-        }
-      }
-    }
-    @include laptop {
-      .text-wrap {
-        .container {
-          left: 50%; transform: translateX(-50%);
-        }
-      }
-    }
-    @include tablet {
-      font-size: 1em;
-      .text-wrap {
-        .text {
-          .line { bottom: -200%; }
-        }
-      }
-    }
-    @include mobile {
-      font-size: 0.8em;
-      .text-wrapper {
-        width: 400px; margin-left: 10px;
-        .text-wrap { .line {bottom: 0%; } }
-      }
-    }
-    @include mobileS {
-      display: none;
-    }
+    .p { padding: 0.5em 2em; font-size: 0.7em; }
+    @include laptop{ left: 50%; transform: translateX(-50%); }
   }
 }
