--- a/public/scss/projects.scss
+++ b/public/scss/projects.scss
@@ -118,7 +118,7 @@
 		overflow-y: auto;
 		min-width: 100%; min-height: 100%;
 		background-color: #1d1d1d;
-		background: url(../img/p3-2.jpg) no-repeat center center fixed;
+		background: url(../img/p3-2.jpg) center center fixed;
 		@include mobileS {
 			.line { display: none; }
 		}
