--- a/public/scss/skills.scss
+++ b/public/scss/skills.scss
@@ -17,7 +17,7 @@ body {
 	overflow-y: auto;
 	min-width: 100%; min-height: 100%;
 	background-color: #1d1d1d;
-	background: url(../img/p3-2.jpg) no-repeat center center fixed;
+	background: url(../img/p3-2.jpg) center center fixed;
 }
 
 .Sbox-wrapper {
@@ -42,133 +42,131 @@ body {
 			transform: translateX(-48%) rotate(9deg);
 		}
 		.s-line {
-			width: 2.3em; height: 0.02em;
+			width: 60px; height: 0.02em;
 			opacity: .5;
 			background-color: #dedede;
-			position: absolute; top: 80%; left: -12.55%;
+			position: absolute; top: 80%; left: -13.7%;
 		}
 		.img-box {
 			img {
 				margin: 0.7em 1em;
 			}
 		}
-	}
-	.frontend {
-		text-align: left;
-		width: 350px; height: 300px;
-		background: rgba(255, 255, 255, 0.23);
-		border: 1px solid #dedede;
-		padding-top: 1em;
-		padding-left: 1em;
-		position: absolute;
-		left: -23.4%; top: 40%;
-		.img-box {
-			padding-left: 0.8em;
-			padding-top: 0.7em;
-			div {
-				width: 70px; height: 70px;
-				display: inline-block;
-				font-family: $Notos;
-				font-size: 0.9em;
-				// background-color: #b6d7fd;
-				// color: #1d1d1d;
-				text-align: center;
-				padding-top: 0.9em;
-			}
-			img {
-				margin: 0.5em 0.8em;
-			}
-		}
-	}
-	.backend {
-		text-align: center;
-		width: 250px; height: 230px;
-		background: rgba(255, 255, 255, 0.23);
-		border: 1px solid #dedede;
-		padding-top: 1em;
-		position: absolute;
-		right: 56.1%; top: 27%;
-		.s-line {
-			width: 2.75em; height: 0.02em;
-			opacity: .5;
-			background-color: #dedede;
-			position: absolute; top: 10%; left: -27%;
-		}
-		.img-box {
-			img {
-				margin: 0.5em 0.5em;
-			}
-			div {display: inline-block; font-family: $Notos; font-size: 0.8em;}
-		}		
-	}
-	.tools {
-		text-align: left;
-		width: 250px; height: 200px;
-		background: rgba(255, 255, 255, 0.23);
-		border: 1px solid #dedede;
-		padding-top: 1em;
-		padding-left: 1em;
-		position: absolute;
-		left: 22%; bottom: 11.8%;
-		.s-line {
-			width: 0.02em; height: 1.2em;
-			opacity: .5;
-			background-color: #dedede;
-			position: absolute; top: -15%; left: 7%;
-		}
-		.img-box {
-			text-align: center;
-			padding-top: 0.8em;
-			margin-right: 1em;
-			img {
-				margin: 0.5em 0.5em;
-			}
-		}
-	}
-	.design {
-		text-align: center;
-		width: 280px; height: 200px;
-		background: rgba(255, 255, 255, 0.23);
-		border: 1px solid #dedede;
-		padding-top: 1em;
-		position: absolute;
-		left: 3.3%; bottom: 5%;
-		.s-line {
-			width: 1.85em; height: 0.05em;
-			opacity: .5;
-			background-color: #dedede;
-			position: absolute; top: 40%; right: -17%;
-		}
-		.img-box {
-			padding-top: 1em;
-			img {
-				margin: 0.5em 0.3em;
-			}
-		}
-	}
-	@include desktopL {
-		.s-line { display: none; }
-	}
-	@include desktop {
-		.frameworks { .s-line { display: none; } }
-		.frontend, .backend, .tools, .design {
-			position: static;
-			margin-top: 2em;
-			text-align: center;
-			width: 450px;
-			.img-box {
-				padding-top: 1.5em;
-				padding-left: 0;
-			}
-			.s-line { display: none; }
-		}
 		.frontend {
-			padding-left: 0; padding-top: 1.5em;
-			height: 300px;
-			.img-box { img { width: 60px; margin: 0.5em;} }
+			text-align: left;
+			width: 350px; height: 300px;
+			background: rgba(255, 255, 255, 0.23);
+			border: 1px solid #dedede;
+			padding-top: 1em;
+			padding-left: 1em;
+			position: absolute;
+			left: -92%; top: 50%;
+			.img-box {
+				padding-left: 0.8em;
+				padding-top: 0.7em;
+				div {
+					width: 70px; height: 70px;
+					display: inline-block;
+					font-family: $Notos;
+					font-size: 0.9em;
+					text-align: center;
+					padding-top: 0.9em;
+				}
+				img {
+					margin: 0.5em 0.8em;
+				}
+			}
 		}
-		.tools { padding-left: 0; }
+		.backend {
+			text-align: center;
+			width: 250px; height: 230px;
+			background: rgba(255, 255, 255, 0.23);
+			border: 1px solid #dedede;
+			padding-top: 1em;
+			position: absolute;
+			left: 25%; top: 27%;
+			.s-line {
+				width: 60px; height: 0.02em;
+				opacity: .5;
+				background-color: #dedede;
+				position: absolute; top: 10%; left: -27%;
+			}
+			.img-box {
+				img {
+					margin: 0.5em 0.5em;
+				}
+				div {display: inline-block; font-family: $Notos; font-size: 0.8em;}
+			}		
+		}
+		.tools {
+			text-align: left;
+			width: 250px; height: 200px;
+			background: rgba(255, 255, 255, 0.23);
+			border: 1px solid #dedede;
+			padding-top: 1em;
+			padding-left: 1em;
+			position: absolute;
+			left: 22%; bottom: 11.8%;
+			.s-line {
+				width: 0.02em; height: 60px;
+				opacity: .5;
+				background-color: #dedede;
+				position: absolute; top: -15%; left: 7%;
+			}
+			.img-box {
+				text-align: center;
+				padding-top: 0.8em;
+				margin-right: 1em;
+				img {
+					margin: 0.5em 0.5em;
+				}
+			}
+		}
+		.design {
+			text-align: center;
+			width: 280px; height: 200px;
+			background: rgba(255, 255, 255, 0.23);
+			border: 1px solid #dedede;
+			padding-top: 1em;
+			position: absolute;
+			left: 3.3%; bottom: 5%;
+			.s-line {
+				width: 60px; height: 0.05em;
+				opacity: .5;
+				background-color: #dedede;
+				position: absolute; top: 40%; right: -17%;
+			}
+			.img-box {
+				padding-top: 1em;
+				img {
+					margin: 0.5em 0.3em;
+				}
+			}
+		}
+		@include desktopL {
+			// .s-line { display: none; }
+		}
+		@include desktop {
+			.frameworks { .s-line { display: none; } }
+			.frontend, .backend, .tools, .design {
+				position: static;
+				margin-top: 2em;
+				text-align: center;
+				width: 450px;
+				.img-box {
+					padding-top: 1.5em;
+					padding-left: 0;
+				}
+				.s-line { display: none; }
+			}
+			.frontend {
+				padding-left: 0; padding-top: 1.5em;
+				height: 300px;
+				.img-box { img { width: 60px; margin: 0.5em;} }
+			}
+			.tools { padding-left: 0; }
+		}
+		@include laptop { margin-top: 7em; margin-left: -15%;}
+		@include mobile { display: none; }
 	}
-	@include laptop { margin-top: 7em; margin-left: -15%;}
-	@include mobile { display: none; }
 }
