--- a/public/scss/projects.scss
+++ b/public/scss/projects.scss
@@ -3,8 +3,8 @@
 
 .Pcontainer {
 	a {
-		width: 300px; background-color: #4af1f1; margin-right: 1.5em; position: relative; overflow: hidden;
-		img { width: 100%; height: 100%; }
+		width: 300px; margin-right: 2em; position: relative; overflow: hidden;
+		img { width: 100%; }
 		.cover {
 			background: rgba(1, 1, 1, 0.4);
 			transition: all .6s;
