--- a/views/contact/contact.pug
+++ b/views/contact/contact.pug
@@ -13,17 +13,14 @@ block content
         .hello.he3 현재 사이트는 pug / node.js / scss 로 제작되어 있습니다.
         .text
           .hello.he3 포트폴리오에 대해 관심이 생기셨거나, 궁금한 점이 있으시다면 아래에 있는 
-          .hello.he4 이메일
-            .pen
-          .line-wrap
-            .hello.he5 로 연락 주시길 바랍니다.
-            .line 
+          .hello.he4 이메일로 연락 주시길 바랍니다.
         .hello.he6 지금까지 성장하는 개발자 이세빈이였습니다 !
-    .container .container 
+        .line-wrap
+          .line 
+    .contact-container .container 
       .contact-wrapper
-        h1 h1
-          .contact-line
-        .contact CONTACT
+        h1 h1&nbsp;CONTACT
+          .h1-pen
       .p.git-hub .git-hub :  
         a(href="https://github.com/gobltpqls99") https://github.com/gobltpqls99 
       .p.e-mail .e-mail : gobltpqls99@naver.com
