--- a/views/skills/skills.pug
+++ b/views/skills/skills.pug
@@ -19,6 +19,7 @@ block content
 				img(src="../img/react.png", alt="icon-img" style="width: 70px;")
 				img(src="../img/vue.png", alt="icon-img" style="width: 70px;")
 			.frontend front-end
+				.s-line 
 				.img-box
 					div AJAX
 					img(src="../img/html.png", alt="" style="width: 70px;")
