--- a/public/css/contact.css
+++ b/public/css/contact.css
@@ -39,7 +39,7 @@ body {
   color: #dedede;
   font-family: "Noto Sans KR", sans-serif;
   position: absolute;
-  top: 35%;
+  top: 30%;
   left: 15%;
   font-size: 1em;
 }
@@ -50,42 +50,33 @@ body {
 
 .con-wrapper .text-wrapper .text-wrap .text {
   position: relative;
-  display: flex;
-  justify-content: baseline;
 }
 
 .con-wrapper .text-wrapper .text-wrap .text .he3 {
-  width: 750px;
+  width: 100%;
 }
 
 .con-wrapper .text-wrapper .text-wrap .text .he4 {
   position: relative;
-  width: 66px;
+  width: 100%;
   display: block;
 }
 
-.con-wrapper .text-wrapper .text-wrap .text .he4 .pen {
-  width: 100%;
-  height: 12px;
-  background-color: #4bf1f14f;
-  position: absolute;
-  top: 8px;
+@media screen and (max-width: 1700px) {
+  .con-wrapper .text-wrapper .text-wrap .text {
+    display: block;
+  }
 }
 
 .con-wrapper .text-wrapper .text-wrap .line-wrap {
   width: 100%;
-  display: flex;
-}
-
-.con-wrapper .text-wrapper .text-wrap .line-wrap .he5 {
-  width: 200px;
 }
 
 .con-wrapper .text-wrapper .text-wrap .line-wrap .line {
   width: 100%;
   height: 0.01em;
   background-color: #4bf1f1;
-  margin-top: 1.5em;
+  margin-top: 2em;
 }
 
 @media screen and (max-width: 1199px) {
@@ -95,21 +86,9 @@ body {
   }
 }
 
-@media screen and (max-width: 991px) {
-  .con-wrapper .text-wrapper .text-wrap .line-wrap .line {
-    display: none;
-  }
-}
-
 @media screen and (max-width: 767px) {
   .con-wrapper .text-wrapper {
     font-size: 1em;
-  }
-}
-
-@media screen and (max-width: 615px) {
-  .con-wrapper .text-wrapper {
-    font-size: 0.8em;
     margin-left: 10px;
   }
 }
@@ -120,45 +99,49 @@ body {
   }
 }
 
-.con-wrapper .container {
+.con-wrapper .contact-container {
   position: absolute;
   top: 60%;
-  right: -30%;
+  right: 10%;
   color: #dedede;
   font-size: 1.45em;
   font-family: "Nanum Gothic Coding", monospace;
 }
 
-.con-wrapper .container .contact-wrapper {
-  display: flex;
-  align-items: baseline;
+.con-wrapper .contact-container .contact-wrapper {
   font-size: 1.5em;
 }
 
-.con-wrapper .container .contact-wrapper h1 {
+.con-wrapper .contact-container .contact-wrapper h1 {
+  width: 400px;
   padding: 1.3em 0;
   padding-left: 1.5em;
   padding-right: 0.5em;
   position: relative;
 }
 
-.con-wrapper .container .contact-wrapper h1 .contact-line {
+.con-wrapper .contact-container .contact-wrapper h1 .h1-pen {
   position: absolute;
-  left: 44.5%;
-  bottom: 35%;
-  width: 180%;
+  top: 53%;
+  left: 11%;
+  width: 48%;
   height: 17px;
   background-color: #4bf1f14f;
 }
 
-.con-wrapper .container .p {
+.con-wrapper .contact-container .p {
   padding: 0.5em 2em;
   font-size: 0.7em;
 }
 
-@media screen and (max-width: 991px) {
-  .con-wrapper .container {
-    left: 50%;
-    transform: translateX(-50%);
+@media screen and (max-width: 767px) {
+  .con-wrapper .contact-container {
+    font-size: 1.3em;
+  }
+}
+
+@media screen and (max-width: 515px) {
+  .con-wrapper .contact-container {
+    display: none;
   }
 }
