--- a/public/scss/contact.scss
+++ b/public/scss/contact.scss
@@ -28,55 +28,48 @@ body {
   .text-wrapper {
     width: 100%; height: 200px;
     color: #dedede; font-family: $Notos;
-    position: absolute; top: 35%; left: 15%;
+    position: absolute; top: 30%; left: 15%;
     font-size: 1em;
     .text-wrap {
       .hello { margin-top: 1.2em; }
-      .text{  position: relative;  display: flex; justify-content: baseline;
-        .he3 { width: 750px; }
-        .he4 { position: relative; width: 66px; display: block;
-          .pen {
-            width: 100%; height: 12px; background-color: #4bf1f14f;
-            position: absolute; top: 8px;
-          }
-        }
+      .text{  position: relative;
+        .he3 { width: 100%; }
+        .he4 { position: relative; width: 100%; display: block; }
       }
-      .line-wrap {
-        width: 100%; display: flex;
-        .he5{ width: 200px; }
+      @include desktopL {
+        .text { display: block; }
+      }
+      .line-wrap { width: 100%;
         .line {
           width: 100%; height: 0.01em;
           background-color: #4bf1f1;
-          margin-top: 1.5em;
+          margin-top: 2em;
           @include desktop { left: -15%;  bottom: -150%; }
-          @include laptop{ display: none;}
         }
       }
     }
-    @include tablet { font-size: 1em; }
-    @include mobile { font-size: 0.8em; margin-left: 10px; }
+    @include tablet { font-size: 1em; margin-left: 10px;  }
     @include mobileS { display: none; }
   }
-  .container {
-    position: absolute; top: 60%; right: -30%;
-    color: #dedede;
-    font-size: 1.45em;
-    font-family: $d2;
+  .contact-container {
+    position: absolute; top: 60%; right: 10%;
+    color: #dedede; font-size: 1.45em; font-family: $d2;
     .contact-wrapper {
-      display: flex; align-items: baseline;
       font-size: 1.5em;
       h1 {
+        width: 400px;
         padding: 1.3em 0;
         padding-left: 1.5em;
         padding-right: 0.5em;
         position: relative;
-        .contact-line {
-          position: absolute; left: 44.5%; bottom: 35%;
-          width: 180%; height: 17px; background-color: #4bf1f14f;
+        .h1-pen {
+          position: absolute; top: 53%; left: 11%;
+          width: 48%; height: 17px; background-color: #4bf1f14f;
         }
       }
     }
     .p { padding: 0.5em 2em; font-size: 0.7em; }
-    @include laptop{ left: 50%; transform: translateX(-50%); }
+    @include tablet { font-size: 1.3em; }
+    @include mobileS { display: none; }
   }
 }
