--- a/public/scss/skills.scss
+++ b/public/scss/skills.scss
@@ -61,6 +61,10 @@ body {
 			padding-left: 1em;
 			position: absolute;
 			left: -92%; top: 50%;
+			.s-line {
+				position: absolute; width: 0.02em; height: 40px;
+				top: 300px; left: 330px;
+			}
 			.img-box {
 				padding-left: 0.8em;
 				padding-top: 0.7em;
@@ -84,12 +88,12 @@ body {
 			border: 1px solid #dedede;
 			padding-top: 1em;
 			position: absolute;
-			left: 25%; top: 27%;
+			left: 110%; top: 20%;
 			.s-line {
-				width: 60px; height: 0.02em;
+				width: 45px; height: 0.02em;
 				opacity: .5;
 				background-color: #dedede;
-				position: absolute; top: 10%; left: -27%;
+				position: absolute; top: 50px; left: -45px;
 			}
 			.img-box {
 				img {
@@ -106,12 +110,12 @@ body {
 			padding-top: 1em;
 			padding-left: 1em;
 			position: absolute;
-			left: 22%; bottom: 11.8%;
+			left: 85%; bottom: -69%;
 			.s-line {
 				width: 0.02em; height: 60px;
 				opacity: .5;
 				background-color: #dedede;
-				position: absolute; top: -15%; left: 7%;
+				position: absolute; top: -30%; left: 7%;
 			}
 			.img-box {
 				text-align: center;
@@ -129,12 +133,12 @@ body {
 			border: 1px solid #dedede;
 			padding-top: 1em;
 			position: absolute;
-			left: 3.3%; bottom: 5%;
+			left: 7%; bottom: -65%;
 			.s-line {
-				width: 60px; height: 0.05em;
+				width: 112px; height: 0.02em;
 				opacity: .5;
 				background-color: #dedede;
-				position: absolute; top: 40%; right: -17%;
+				position: absolute; top: 53%; left: -40.7%;
 			}
 			.img-box {
 				padding-top: 1em;
@@ -144,7 +148,7 @@ body {
 			}
 		}
 		@include desktopL {
-			// .s-line { display: none; }
+			.s-line { display: none; }
 		}
 		@include desktop {
 			.frameworks { .s-line { display: none; } }
