--- a/public/css/skills.css
+++ b/public/css/skills.css
@@ -244,8 +244,9 @@ body {
 
 @media screen and (max-width: 991px) {
   .Sbox-wrapper .frameworks {
-    margin-top: 7em;
-    margin-left: -15%;
+    margin-top: 300px;
+    margin-left: -20%;
+    transition: all .5s;
   }
 }
 
