--- a/public/scss/contact.scss
+++ b/public/scss/contact.scss
@@ -28,7 +28,7 @@ body {
   .text-wrapper {
     width: 100%; height: 200px;
     color: #dedede; font-family: $Notos;
-    position: absolute; top: 30%; left: 15%;
+    position: absolute; top: 250px; left: 15%;
     font-size: 1em;
     .text-wrap {
       .hello { margin-top: 1.2em; }
@@ -52,7 +52,7 @@ body {
     @include mobileS { display: none; }
   }
   .contact-container {
-    position: absolute; top: 60%; right: 10%;
+    position: absolute; top: 550px; right: 10%;
     color: #dedede; font-size: 1.45em; font-family: $d2;
     .contact-wrapper {
       font-size: 1.5em;
